# NerlNetTesting

./: CMakeLists.txt  RunOrWalkPredictResults.csv  json3PC.json  jsonArch1PC.json  shuffled-input.csv
RunOrWalkPredictNolabelsNormalized_splitted/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
RunOrWalkPredictNolabels_splitted/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
RunOrWalkTrainNormalized_splitted/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  4.csv  40.csv  41.csv  42.csv  43.csv  44.csv  45.csv  (+33 more)
RunOrWalkTrain_splitted/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  4.csv  40.csv  41.csv  42.csv  43.csv  44.csv  45.csv  (+49 more)
src_cpp/cppBridge/: NerlNIF.cpp
src_erl/Communication_Layer/http_Nerlserver/: NerlNifCppOutSet.txt  NerlStatemOut.txt
src_erl/erlBridge/: erlModule.beam
src_py/: .sconsign.dblite
(+44 files in other folders)
